# deep-learning-pytorch

./: .gitignore  README.md  pyproject.toml  salary.csv
deep_learning_pytorch/: backpropagation.py  cross_entropy_loss.py  data_loader.py  evaluating_model.py  fine_tuning.py  layer_initialization.py  maximixing_performance.py  one_hot_encoding.py  training_loop.py
deep_learning_pytorch/introduction/: cross_entropy_loss.py  fighting_overfitting.py  learning_rate_and_momentum.py  manually_updating_params.py  optimizers.py  training_loop.py
