[tool.poetry]
name = "deep-learning-pytorch"
version = "0.1.0"
description = ""
authors = ["Alex Wernick <alex.j.wernick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.7.0"
numpy = "^2.2.5"
pandas = "^2.2.3"
torchmetrics = "^1.7.1"
torchvision = "^0.22.0"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
